# serializer version: 1
# name: test_binary_sensor_entities[binary_sensor.front_door_open-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.front_door_open',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Front Door Open',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_0003',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_entities[binary_sensor.front_door_open-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Front Door Open',
      'status_enabled': True,
      'status_last_finish': None,
      'status_last_run': None,
      'status_next_scheduled_run': None,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.front_door_open',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor_entities[binary_sensor.sunset_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.sunset_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:script-text-outline',
    'original_name': None,
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'program_status',
    'unique_id': 'aa:bb:cc:dd:ee:ff_0010_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_entities[binary_sensor.sunset_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Sunset Lights',
      'icon': 'mdi:script-text-outline',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.sunset_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
